--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,13 @@ table
        background-color: #111;
    }
 
+   
+
+   .responsive {
+       width: 100%;
+       height: auto;
+   }
+   @media (min-width: 768px) {
+}
+
+
